force-app/main/default/objects/Hired_Candidate__c/Hired_Candidate__c.object-meta.xml
<CustomObject>
    <label>Hired Candidate</label>
    <nameField>
        <label>Hired Candidate Pool Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hired Candidat</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>