force-app/main/default/objects/Hired_Candidate__c/fields/Allocation_Status__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Status__c</fullName>
    <label>Allocation Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Allocation_Status</valueSetName>
    </valueSet>
</CustomField>