force-app/main/default/objects/Hired_Candidate__c/fields/Interview_Event_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Interview_Event_Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interview Event Candidate</label>
    <referenceTo>InterviewEventCandidate__c</referenceTo>
    <relationshipName>Interview_Event_candidates</relationshipName>
    <type>Lookup</type>
</CustomField>