force-app/main/default/objects/Hired_Candidate__c/fields/Percentage_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Allocated__c</fullName>
    <label>Percentage Allocated</label>
    <summarizedField>Team_Assignment__c.Involvement_Percent__c</summarizedField>
    <summaryForeignKey>Team_Assignment__c.Hired_Candidate__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>