force-app/main/default/objects/Hired_Candidate__c/validationRules/Allocation_is_per_cent.validationRule-meta.xml
<ValidationRule>
    <fullName>Allocation_is_per_cent</fullName>
    <active>true</active>
    <errorConditionFormula>Percentage_Allocated__c &gt; 100</errorConditionFormula>
    <errorMessage>Allocation percent exceeds 100</errorMessage>
</ValidationRule>