force-app/main/default/objects/Hired_Candidate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Candidate__c</columns>
    <columns>Candidate_Level__c</columns>
    <columns>Allocation_Status__c</columns>
    <columns>Onboarding_Completed__c</columns>
    <columns>Interview_Event_Candidate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>